# wsync

./: pyproject.toml
wsync/: main.py
